--- a/api/qsharp/microsoft.quantum.extensions.math.sqrt.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.sqrt.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.sqrt
 name: Sqrt
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: Sqrt 已弃用。 请改用 @"microsoft.quantum.math.sqrt"。
 syntax: 'function Sqrt (d : Double) : Double'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: f779db87dc18260e27bd0cda4ea78a3c2bc53725
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4e921b44bd432413f46f9a5ab2cc639aff21ed41
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681879"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347678"
