--- a/api/qsharp/microsoft.quantum.extensions.math.tan.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.tan.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.tan
 name: Tan
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: Tan 已弃用。 请改用 @"microsoft.quantum.math.tan"。
 syntax: 'function Tan (d : Double) : Double'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 67c864347a738561407ac1ead76eb6238a254d9b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e92ba0f44eceb86dd94bfc6a236ce19870b49e5f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681862"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347627"
