--- a/api/qsharp/microsoft.quantum.math.dividedbycp.yml
+++ b/api/qsharp/microsoft.quantum.math.dividedbycp.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.dividedbycp
 name: DividedByCP
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入的商。
 syntax: 'function DividedByCP (a : Microsoft.Quantum.Math.ComplexPolar, b : Microsoft.Quantum.Math.ComplexPolar) : Microsoft.Quantum.Math.ComplexPolar'
 input:
@@ -20,9 +20,9 @@ output:
   - summary: 商 $a/b $。
     uid: microsoft.quantum.math.complexpolar
 metadata:
-  ms.openlocfilehash: 54eb09f20278eab3432582ba04dad55455c9144d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7ecdd306acff72798ac3ed07c6d089a02632a2d9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673934"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334775"
