--- a/api/qsharp/microsoft.quantum.math.expd.yml
+++ b/api/qsharp/microsoft.quantum.math.expd.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.expd
 name: ExpD
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回 $e 按指定次幂。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.exp) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.exp) 。
 syntax: 'function ExpD (a : Double) : Double'
 input:
   content: '(a : Double)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 42b1299c3e9dcffc927ac316ac86e11be1fff167
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 767942985ae13e1fb5b21ee524d67155b2b0df54
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682761"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334605"
