--- a/api/qsharp/Microsoft.Quantum.Characterization.yml
+++ b/api/qsharp/Microsoft.Quantum.Characterization.yml
@@ -4,13 +4,13 @@ name: Microsoft.Quantum.Characterization
 summary: " # <a name=\"summary\"></a>总结\n 此命名空间包含用于了解量程状态和进程的属性的函数和操作，包括 tomography 和阶段估算。"
 operations:
 - uid: microsoft.quantum.characterization.continuousphaseestimationiteration
-  summary: 使用单一 oracle 的任意实际幂，执行迭代（经典控制）阶段估算算法的单个迭代。
+  summary: 使用单一 oracle 的任意实际幂，执行迭代 (经典控制的) 阶段估算算法的单个迭代。
 - uid: microsoft.quantum.characterization.discretephaseestimationiteration
-  summary: 使用单一 oracle 的整数幂，执行迭代（经典控制）阶段估算算法的单个迭代。
+  summary: 使用单一 oracle 的整数幂，对迭代 (经典控制的) 阶段估算算法执行单个迭代。
 - uid: microsoft.quantum.characterization.estimatefrequency
-  summary: 考虑到准备和度量，通过执行给定数量的试验来估算度量成功`Zero`（返回）的频率。
+  summary: 考虑到准备和度量， `Zero` 通过执行给定数量的试验，估算量化指标成功 (返回) 的频率。
 - uid: microsoft.quantum.characterization.estimatefrequencya
-  summary: 对于 adjointable 和度量值的准备，通过执行给定数量的试验来估算度量成功（ `Zero`返回）的频率。
+  summary: 对于 adjointable 和度量值的准备， `Zero` 通过执行给定数量的试验来估算度量成功 (返回) 的频率。
 - uid: microsoft.quantum.characterization.estimateimagoverlapbetweenstates
   summary: 假设每个操作都准备好状态的副本，并估计每个操作准备的状态之间重叠部分的虚部。
 - uid: microsoft.quantum.characterization.estimateoverlapbetweenstates
@@ -22,15 +22,15 @@ operations:
 - uid: microsoft.quantum.characterization.measureidentity
   summary: 测量 qubits 的寄存器上的标识运算符。
 - uid: microsoft.quantum.characterization.quantumphaseestimation
-  summary: 执行给定 oracle `U`和的量程阶段估算算法，并`targetState`将该阶段读入大字节序量程寄存器。
+  summary: 执行给定 oracle 和的量程阶段估算算法 `U` ，并将 `targetState` 该阶段读入大字节序量程寄存器。
 - uid: microsoft.quantum.characterization.robustphaseestimation
-  summary: 为给定的 oracle `U`和 eigenstate 执行强健的非迭代量程阶段估算算法，并提供针对海森堡限制处的变化缩放阶段的单个实际值估算。
+  summary: 为给定的 oracle 和 eigenstate 执行强健的非迭代量程阶段估算算法 `U` ，并提供针对海森堡限制处的变化缩放阶段的单个实际值估算。
 - uid: microsoft.quantum.characterization.singlequbitprocesstomographymeasurement
   summary: 根据感兴趣的特定通道，在 Pauli 基础上执行 qubit 进程 tomography 度量。
 metadata:
-  ms.openlocfilehash: 2ae4ee28cf6e87a3fde1f8107194760c388b462c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b8b7c1b7e6fc3dad00e62d7722ef4cb38b96b82f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673362"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89341473"
