--- a/api/qsharp/microsoft.quantum.characterization.measureidentity.yml
+++ b/api/qsharp/microsoft.quantum.characterization.measureidentity.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.characterization.measureidentity
 name: MeasureIdentity
 type: operation
-namespace: Microsoft.Quantum.Characterization
+namespace: microsoft.quantum.characterization
 summary: 测量 qubits 的寄存器上的标识运算符。
 remarks: >-
-  由于 $ \boldone $ 只有 eigenvalue $1 $，并且没有负 eigenvalue，此操作始终返回`Zero`，对应于 eigenvalue $ + 1 = （-1） ^ 0 $，而不会导致的状态折叠。 `register`
+  由于 $ \boldone $ 只有 eigenvalue $1 $，并且没有负 eigenvalue，此操作始终返回 `Zero` ，对应于 eigenvalue $ + 1 = (-1) ^ $0，而不会导致的状态折叠 `register` 。
 
 
   此操作本身并不有用，但在进程 tomography 的上下文中很有用，因为它提供了有关量程进程的跟踪保存的信息。
@@ -23,13 +23,13 @@ input:
 output:
   content: Result
   types:
-  - summary: 结果值`Zero`。
+  - summary: 结果值 `Zero` 。
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: 28dd3655c883c02b798e6e4cdf39c70100c6535b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 9b6b8bfbf8d13bf1415afadd0b520551201cd3d2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677641"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354291"
