--- a/api/qsharp/microsoft.quantum.characterization.robustphaseestimation.yml
+++ b/api/qsharp/microsoft.quantum.characterization.robustphaseestimation.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.characterization.robustphaseestimation
 name: RobustPhaseEstimation
 type: operation
-namespace: Microsoft.Quantum.Characterization
-summary: 为给定的 oracle `U`和 eigenstate 执行强健的非迭代量程阶段估算算法，并提供针对海森堡限制处的变化缩放阶段的单个实际值估算。
+namespace: microsoft.quantum.characterization
+summary: 为给定的 oracle 和 eigenstate 执行强健的非迭代量程阶段估算算法 `U` ，并提供针对海森堡限制处的变化缩放阶段的单个实际值估算。
 remarks: 在大量查询的限制中，Cramer-Rao 下限： $ \phi $ 满足 $ \sigma \ge 2 \pi/\text{# of 查询} $。
 syntax: 'operation RobustPhaseEstimation (bitsPrecision : Int, oracle : Microsoft.Quantum.Oracles.DiscreteOracle, targetState : Qubit[]) : Double'
-references: '- 通过强健的阶段对通用单一 Qubit 入口集进行强健的校准： Shelby Kimmel、Guang 脱离 Hao Low、Theodore J Yoderhttps://arxiv.org/abs/1502.02677'
+references: '- 通过强健的阶段对通用单一 Qubit 入口集进行强健的校准： Shelby Kimmel、Guang 脱离 Hao Low、Theodore J Yoder https://arxiv.org/abs/1502.02677'
 input:
   content: '(bitsPrecision : Int, oracle : Microsoft.Quantum.Oracles.DiscreteOracle, targetState : Qubit[])'
   types:
@@ -18,7 +18,7 @@ input:
     summary: 为给定整数幂运算实现 $U ^ m $ $m $ 的操作。
     uid: microsoft.quantum.oracles.discreteoracle
   - name: targetState
-    summary: $U $ 作用于的量程寄存器。 如果它存储 $U $ 的 eigenstate $ \ket{\phi} $，则 $U \ket{\phi} = e ^ {i\phi} \ket{\phi} $ for $ \phi\in （-\pi，\pi] $ 未知阶段。
+    summary: $U $ 作用于的量程寄存器。 如果它存储 $U $ 的 eigenstate $ \ket{\phi} $，则 $U \ket{\phi} = e ^ {i\phi} \ket{\phi} $ for $ \phi\in (-\pi，\pi] $ 未知阶段。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -28,9 +28,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 5fa87e4da621871685501d58fa4a70b172f973b7
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 098cb9bbf804d93d2e03d4f776bd0e88cb5b25bb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82677605"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354257"
