--- a/api/qsharp/microsoft.quantum.extensions.math.signd.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.signd.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.signd
 name: SignD
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: SignD 已被弃用。 请改用 @"microsoft.quantum.math.signd"。
 syntax: 'function SignD (a : Double) : Int'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: d459b535e19ddcca60309bc363f51f10a0007474
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6ce1beb3ebd8529d92ed74356fc7cad6cecf38f7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686062"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89347763"
