--- a/api/qsharp/microsoft.quantum.math.dividedbyc.yml
+++ b/api/qsharp/microsoft.quantum.math.dividedbyc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.dividedbyc
 name: DividedByC
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入的商。
 syntax: 'function DividedByC (a : Microsoft.Quantum.Math.Complex, b : Microsoft.Quantum.Math.Complex) : Microsoft.Quantum.Math.Complex'
 input:
@@ -20,9 +20,9 @@ output:
   - summary: 商 $a/b $。
     uid: microsoft.quantum.math.complex
 metadata:
-  ms.openlocfilehash: 51004bb060113f1184bfaded49290a2427afa568
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 99d3a229fbb1a755b8cb97ea6593bbbf5df3230a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673959"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334758"
