--- a/api/qsharp/microsoft.quantum.math.dividedbyl.yml
+++ b/api/qsharp/microsoft.quantum.math.dividedbyl.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.dividedbyl
 name: DividedByL
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回两个输入的商。
 syntax: 'function DividedByL (a : BigInt, b : BigInt) : BigInt'
 input:
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: dfbd87e9f03e26d3d7f31fa304509692cadc07d3
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1169b55f6d65db6df36d068b270f0eae7ca2f317
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673894"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334673"
