--- a/api/qsharp/microsoft.quantum.math.inversemodi.yml
+++ b/api/qsharp/microsoft.quantum.math.inversemodi.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.math.inversemodi
 name: InverseModI
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 返回 $b $，$a \cdot b = 1 （\operatorname{mod} \texttt{modulus}） $。
+namespace: microsoft.quantum.math
+summary: 返回 $b $ $a \cdot b = 1 ( \operatorname{mod} \texttt{modulus} ) $。
 syntax: 'function InverseModI (a : Int, modulus : Int) : Int'
 input:
   content: '(a : Int, modulus : Int)'
@@ -19,13 +19,13 @@ input:
 output:
   content: Int
   types:
-  - summary: 整数 $b $，$a \cdot b = 1 （\operatorname{mod} \texttt{modulus}） $。
+  - summary: 整数 $b $，$a \cdot b = 1 ( \operatorname{mod} \texttt{modulus} ) $。
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: bed7ddedcbfbd97943ee545a6be34ed03c93d1a1
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f9007869942e18dd6181ca16c0908d9f0c1230d9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673762"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89334537"
